--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </style>
 </head>
 <body>  <header>
-    <img src="Logo.jpeg" alt="Code n Curry logo">
+    <img src="Logo.jpg" alt="Code n Curry logo">
     <h1>Code n Curry</h1>
     <p>Where tech meets taste — Opening soon!</p>
   </header>  <section>
