--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
       </div>
     </div>
   </section>  <section>
-    <h2>Stay Connected</h2>
-    <p>Email: hello@codencurry.com</p>
+    <h2>Stay Connected</h2
     <p>Instagram: <a href="https://instagram.com/codencurry" target="_blank">@codencurry</a></p>
   </section>  <footer>
     <p>&copy; 2025 Code n Curry. All rights reserved.</p>
