--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     </div>
   </section>  <section>
     <h2>Stay Connected</h2
+    <p>Address: Chemperi, Kannur</p>                     
     <p>Instagram: <a href="https://instagram.com/codencurry" target="_blank">@codencurry</a></p>
   </section>  <footer>
     <p>&copy; 2025 Code n Curry. All rights reserved.</p>
