--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
       color: #d9534f;
       text-decoration: none;
     }
+    .social-icon {
+      width: 20px;
+      vertical-align: middle;
+      margin-right: 5px;
+    }
   </style>
 </head>
 <body>  <header>
@@ -93,7 +98,10 @@
   </section>  <section>
     <h2>Stay Connected</h2
     <p>Address: Chemperi, Kannur</p>                     
-    <p>Instagram: <a href="https://instagram.com/codencurry" target="_blank">@codencurry</a></p>
+    <p>
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon">
+      <a href="https://instagram.com/codencurry" target="_blank">codencurry</a>
+    </p>
   </section>  <footer>
     <p>&copy; 2025 Code n Curry. All rights reserved.</p>
   </footer>
