--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
     </div>
   </section>  <section>
     <h2>Stay Connected</h2
-    <p>Address: Chemperi, Kannur</p>                     
+    <p>Address: Malayora Hwy, Near Vimal Jyothi Engineering College, Chemperi, Kannur</p>                     
     <p>
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon">
       <a href="https://instagram.com/codencurry" target="_blank">codencurry</a>
     </p>
   </section>  <footer>
-    <p>&copy; 2025 Code n Curry. All rights reserved.</p>
+    <p>&copy; 2025 Code And Curry. All rights reserved.</p>
   </footer>
   <script>
     const countdownEl = document.getElementById("countdown");
