--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>  <header>
     <img src="logo.jpg" alt="Code n Curry logo">
-    <h1>Code 'N Curry</h1>
+    <h1>Code 'N Curry Restaurant</h1>
     <p>Where tech meets taste — Opening soon!</p>
     <div id="countdown"></div>
   </header>  <section>
