--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>  <header>
     <img src="logo.jpg" alt="Code n Curry logo">
-    <h1>Code 'N Curry Restaurant</h1>
+    <h1>Code n Curry Restaurant</h1>
     <p>Where tech meets taste — Opening soon!</p>
     <div id="countdown"></div>
   </header>  <section>
@@ -103,7 +103,7 @@
       <a href="https://instagram.com/codencurry" target="_blank">codencurry</a>
     </p>
   </section>  <footer>
-    <p>&copy; 2025 Code And Curry. All rights reserved.</p>
+    <p>&copy; 2025 Code n Curry. All rights reserved.</p>
   </footer>
   <script>
     const countdownEl = document.getElementById("countdown");
