--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </style>
 </head>
 <body>  <header>
-    <img src="logo.jpg" alt="Code n Curry logo">
+    <img src="logo.png" alt="Code n Curry logo">
     <h1>Code n Curry Restaurant</h1>
     <p>Where tech meets taste — Opening soon!</p>
     <div id="countdown"></div>
