--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       text-align: center;
     }
     header {
-      background-color: #d9534f;
+      background-color: black;
       color: white;
       padding: 60px 20px 30px 20px;
     }
