--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coming Soon: Code n Curry</title>
+  <title>Coming Soon: Code N Curry</title>
   <style>
     body {
       margin: 0;
