--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
       margin-right: 5px;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NRLG5RFC75"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-NRLG5RFC75');
+</script>
 </head>
 <body>  <header>
     <img src="logo.png" alt="Code n Curry logo">
