--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>  <header>
     <img src="logo.png" alt="Code n Curry logo">
-    <h1>Code n Curry Restaurant</h1>
+    <h1>Code N Curry Restaurant</h1>
     <p>Where tech meets taste — Opening soon!</p>
     <div id="countdown"></div>
   </header>  <section>
@@ -99,8 +99,8 @@
         <p>Yemeni-style rice with slow-cooked meat — a perfect algorithm of flavors.</p>
       </div>
       <div class="menu-item">
-        <h3>Debug Dessert Duo</h3>
-        <p>Chocolate lava cake served with a chilled vanilla milkshake — the perfect closing tag to your meal.</p>
+        <h3>Debug Dessert</h3>
+        <p>Chilled vanilla milkshake with ice cream — the perfect closing tag to your meal.</p>
       </div>
     </div>
   </section>  <section>
@@ -111,7 +111,7 @@
       <a href="https://instagram.com/codencurry" target="_blank">codencurry</a>
     </p>
   </section>  <footer>
-    <p>&copy; 2025 Code n Curry. All rights reserved.</p>
+    <p>&copy; 2025 Code N Curry. All rights reserved.</p>
   </footer>
   <script>
     const countdownEl = document.getElementById("countdown");
