--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coming Soon: Code N Curry</title>
+  <title>Code N Curry</title>
   <style>
     body {
       margin: 0;
@@ -82,7 +82,7 @@
 <body>  <header>
     <img src="logo.png" alt="Code n Curry logo">
     <h1>Code N Curry Restaurant</h1>
-    <p>Where tech meets taste — Opening soon!</p>
+    <p>Where tech meets taste — Opening on 9th June 2025</p>
     <div id="countdown"></div>
   </header>  <section>
     <h2>Our Philosophy</h2>
@@ -115,7 +115,7 @@
   </footer>
   <script>
     const countdownEl = document.getElementById("countdown");
-    const launchDate = new Date("June 10, 2025 10:00:00").getTime();
+    const launchDate = new Date("June 9, 2025 11:00:00").getTime();
 
     const updateCountdown = () => {
       const now = new Date().getTime();
