--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Code N Curry</title>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Code N Curry",
+  "url": "https://codencurry.in",
+  "sameAs": [
+    "https://www.instagram.com/codencurry/"
+  ]
+}
+  </script>
   <style>
     body {
       margin: 0;
