--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         }
       })
       .catch(error => {
-        statusEl.textContent = "❌ An error occurred.";
+        statusEl.textContent = "";
         console.error("CallMeBot error:", error);
       });
   });
